# requests-html

./: CHANGELOG.md  Pipfile  README.rst  pyproject.toml  requests_html.py
.github/workflows/: tests.yml
docs/source/: index.rst  scrape.py
tests/: test_internet.py  test_requests_html.py
